# MarketLens

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  daily-report.yml  daily.yml  pages.yml  test.yml
config/: settings.py  sources.yaml
public/: index.html  latest.html
scripts/: build_pages.py  demo_gdelt.py  demo_run.py  run_once.py  seed_sources.py
src/: __init__.py  main.py  pipeline.py  schemas.py
src/analysis/: __init__.py  llm_client.py  market_analyzer.py  prompts.py
src/classification/: __init__.py  classifier.py
src/delivery/: api_server.py  email_sender.py
src/filtering/: __init__.py  relevance_filter.py
src/ingestion/: __init__.py  api_collector.py  base.py  gdelt_collector.py  orchestrator.py  rss_collector.py
src/reporting/: report_generator.py
src/reporting/templates/: daily_report.html  daily_report.md  email_digest.html  email_digest.md
src/scheduler/: __init__.py  daily_scheduler.py
src/storage/: __init__.py  database.py  models.py
src/utils/: __init__.py  hashing.py  logger.py  text.py
tests/: conftest.py  test_analyzer.py  test_filtering.py  test_gdelt_collector.py  test_reporting.py
