[project]
name = "ai-market-intelligence"
version = "1.0.0"
description = "Autonomous AI agent that produces a daily global market intelligence report."
authors = [{ name = "Vishal Kotak", email = "vkotak.007@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"
